--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,23 @@
     <string name="step_1">Step 1</string>
     <string name="step_2">Step 2</string>
     <string name="step_3">Step 3</string>
+
+    <string name="Heading">Finalizing Update!</string>
+    <string name="greating">Software update installed successfully!</string>
+    <string name="Text"><![CDATA[ <p>This software update improves the proximity sensor behaviour while making a call (screen going on/off). </p> <p>Please calibrate the proximity sensor to finalize the update procedure - it\'s easy and done in a second!</p>]]></string>
+    <string name="next">Next</string>
+    <string name="logtag">UpdateFinalizer</string>
+    <string name="NotificationText">Please calibrate the proximity sensor of your device.</string>
+    <string name="dontshowagain">Don\'t show this screen again.</string>
+    <string name="preference_file_key" translatable="false">com.fairphone.psensor.preferences</string>
+    <string name="preference_already_shown" translatable="false">preference_already_shown</string>
+    <string name="preference_do_not_show_again" translatable="false">preference_do_not_show_again</string>
+    <string name="reboot"><![CDATA[OK & Reboot]]></string>
+    <string name="Exit">Exit</string>
+    <string name="OK">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="ask_really_dont_show_title">It really doesn\'t take a lot of time...</string>
+    <string name="ask_really_dont_show_text"><![CDATA[However, you can calibrate the proximity sensor at a later time at <it>Settings → Maintenance → Proximity Senor</it>.]]></string>
+    <string name="preference_successfully_calibrated">preference_successfully_calibrated</string>
+
 </resources>
