--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,15 +10,15 @@
     <string name="msg_reading">Checking...</string>
     <string name="msg_unblock">Remove your finger from the sensor area and press the OK button.</string>
     <string name="msg_cal">Calibrating...</string>
-    <string name="msg_calibration_success">Calibration successful! Press the OK button to finalize the calibration process and to reboot your Fairphone.</string>
+    <string name="msg_calibration_success"><![CDATA[Calibration successful! Press the OK & Reboot button to finalize the calibration process and to reboot your Fairphone.]]></string>
     <string name="msg_step_success">Successful</string>
     <string name="msg_fail">Unsuccessful</string>
     <string name="name_read">OK</string>
     <string name="name_exit">Exit</string>
     <string name="msg_fail_block">Something went wrong, please try again. Make sure you cover the sensor area completely.</string>
-    <string name="msg_fail_cal">Calibration unsuccessful, please check assemble...</string>
+    <string name="msg_fail_cal">Calibration unsuccessful, please check the device and try again.</string>
     <string name="msg_fail_unlock">Something went wrong, please try again. Make sure to remove your finger from the sensor area and that the screen is clean.</string>
-    <string name="msg_fail_write_sns">Encountering unexpected permission issue...</string>
+    <string name="msg_fail_write_sns">Encountering unexpected permission issue…</string>
 
     <string name='not_triggered'>Not triggered</string>
     <string name='state'>State: </string>
@@ -30,11 +30,11 @@
     <string name="step_2">Step 2</string>
     <string name="step_3">Step 3</string>
 
-    <string name="Heading">Finalizing Update!</string>
-    <string name="greating">Software update installed successfully!</string>
-    <string name="Text"><![CDATA[ <p>This software update improves the proximity sensor behaviour while making a call (screen going on/off). </p> <p>Please calibrate the proximity sensor to finalize the update procedure - it\'s easy and done in a second!</p>]]></string>
+    <string name="Heading">One more thing...</string>
+    <string name="greating">Proximity sensor calibration</string>
+    <string name="Text"><![CDATA[ <p>Fairphone OS now gives you the option to calibrate the proximity sensor - this improves the sensor behavior while making a call (screen going off/on).</p> <p>We recommend to calibrate the proximity sensor now to get the best experience - it\'s easy and done in a second!</p>]]></string>
     <string name="next">Next</string>
-    <string name="logtag">UpdateFinalizer</string>
+    <string name="logtag" translatable="false">UpdateFinalizer</string>
     <string name="NotificationText">Please calibrate the proximity sensor of your device.</string>
     <string name="dontshowagain">Don\'t show this screen again.</string>
     <string name="preference_file_key" translatable="false">com.fairphone.psensor.preferences</string>
@@ -44,8 +44,9 @@
     <string name="Exit">Exit</string>
     <string name="OK">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="ask_really_dont_show_title">It really doesn\'t take a lot of time...</string>
-    <string name="ask_really_dont_show_text"><![CDATA[However, you can calibrate the proximity sensor at a later time at <it>Settings → Maintenance → Proximity Senor</it>.]]></string>
-    <string name="preference_successfully_calibrated">preference_successfully_calibrated</string>
+    <string name="ask_really_dont_show_title">Are you sure?</string>
+    <string name="ask_really_dont_show_text"><![CDATA[Calibrating the proximity sensor is easy and will improve the call experience. <it>You can calibrate the proximity sensor at a later time in Settings → Maintenance → Proximity Sensor Tool</it>.]]></string>
+    <string name="preference_successfully_calibrated" translatable="false">preference_successfully_calibrated</string>
+    <string name="NotificationTitle">Finalizing Update</string>
 
 </resources>
