Fix the ellipsis character in translations

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -15,15 +15,15 @@
     <string name="dontshowagain">Diese Meldung künftig nicht mehr zeigen.</string>
     <string name="greating">Näherungssensorkalibrierung</string>
     <string name="msg_block">Decke den Sensorbereich komplett mit deinem Finger ab (der Sensorbereich ist im obigen Bild hervorgehoben) und drücke gleichzeitig auf OK.</string>
-    <string name="msg_cal">Kalibrieren...</string>
+    <string name="msg_cal">Kalibrieren…</string>
     <string name="msg_calibration_success"><![CDATA[Kalibrierung erfolgreich. Drücke auf "OK & Neustart" um die Kalibrierung abzuschließen und dein Fairphone neu zu starten.]]></string>
     <string name="reboot"><![CDATA[OK & Neustart]]></string>
     <string name="msg_fail">Fehler</string>
     <string name="msg_fail_block">Hier ging was schief. Bitte probier es noch einmal. Achte darauf den Sensorbereich komplett abzudecken.</string>
     <string name="msg_fail_cal">Kalibrierung fehlgeschlagen. Bitte überprüfe das Gerät und versuch es noch einmal.</string>
     <string name="msg_fail_unlock">Hier ging was schief. Bitte probier es noch einmal. Stelle sicher, dass der Sensorbereich frei und der Bildschirm sauber sind.</string>
-    <string name="msg_fail_write_sns">Ein unerwartetes Problem mit Rechten ist aufgetreten...</string>
-    <string name="msg_reading">Lesen...</string>
+    <string name="msg_fail_write_sns">Ein unerwartetes Problem mit Rechten ist aufgetreten…</string>
+    <string name="msg_reading">Lesen…</string>
     <string name="msg_step_success">Fertig</string>
     <string name="msg_unblock">Entferne deinen Finger vom Sensorbereich und drücke danach auf OK.</string>
     <string name="name_exit">Schließen</string>
