--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="activity_calibration">Calibration</string>
 
     <string name="msg_block">Cover the sensor area completely with your finger (the sensor area is shown in the image above), then press the OK button.</string>
-    <string name="msg_reading">Checking...</string>
+    <string name="msg_reading">Checking…</string>
     <string name="msg_unblock">Remove your finger from the sensor area and press the OK button.</string>
-    <string name="msg_cal">Calibrating...</string>
+    <string name="msg_cal">Calibrating…</string>
     <string name="msg_calibration_success"><![CDATA[Calibration successful! Press the OK & Reboot button to finalize the calibration process and to reboot your Fairphone.]]></string>
     <string name="msg_step_success">Successful</string>
     <string name="msg_fail">Unsuccessful</string>
@@ -30,7 +30,7 @@
     <string name="step_2">Step 2</string>
     <string name="step_3">Step 3</string>
 
-    <string name="Heading">One more thing...</string>
+    <string name="Heading">One more thing…</string>
     <string name="greating">Proximity sensor calibration</string>
     <string name="Text"><![CDATA[ <p>Fairphone OS now gives you the option to calibrate the proximity sensor - this improves the sensor behavior while making a call (screen going off/on).</p> <p>We recommend to calibrate the proximity sensor now to get the best experience - it\'s easy and done in a second!</p>]]></string>
     <string name="next">Next</string>
