--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,7 +14,7 @@
     <string name="cancel">Abbrechen</string>
     <string name="dontshowagain">Diese Meldung künftig nicht mehr zeigen.</string>
     <string name="greating">Näherungssensorkalibrierung</string>
-    <string name="msg_block">Decke den Sensorbereich komplett mit deinem Finger ab (der Sensorbereich ist im obigen Bild hervorgehoben) und drücke gleichzeitig auf OK.</string>
+    <string name="msg_block">Decke den Sensorbereich komplett mit deinem Finger ab (der Sensorbereich ist im obigen Bild hervorgehoben) und drücke gleichzeitig auf Weiter.</string>
     <string name="msg_cal">Kalibrieren…</string>
     <string name="msg_calibration_success"><![CDATA[Kalibrierung erfolgreich. Drücke auf "OK & Neustart" um die Kalibrierung abzuschließen und dein Fairphone neu zu starten.]]></string>
     <string name="reboot"><![CDATA[OK & Neustart]]></string>
@@ -25,7 +25,7 @@
     <string name="msg_fail_write_sns">Ein unerwartetes Problem mit Rechten ist aufgetreten…</string>
     <string name="msg_reading">Lesen…</string>
     <string name="msg_step_success">Fertig</string>
-    <string name="msg_unblock">Entferne deinen Finger vom Sensorbereich und drücke danach auf OK.</string>
+    <string name="msg_unblock">Entferne deinen Finger vom Sensorbereich und drücke danach auf Weiter.</string>
     <string name="name_exit">Schließen</string>
     <string name="name_read">OK</string>
     <string name="next">Weiter</string>
