--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,13 @@
     <string name="activity_diagnostics">Diagnostics</string>
     <string name="activity_calibration">Calibration</string>
 
+    <!-- DIALOGS -->
+    <string name="dialog_cancel">Cancel</string>
+    <string name="dialog_go_to_updater">Check for updates</string>
+
+    <string name="incompatible_device">Incompatible device</string>
+    <string name="device_cannot_run_calibration_tool">The calibration tool cannot be run on your Fairphone 2. Make sure your device is running the latest software update.</string>
+
     <string name="msg_block">Cover the sensor area completely with your finger (the sensor area is shown in the image above), then press the Next button.</string>
     <string name="msg_reading">Checking…</string>
     <string name="msg_unblock">Remove your finger from the sensor area and press the Next button.</string>
@@ -48,5 +55,12 @@
     <string name="ask_really_dont_show_text"><![CDATA[Calibrating the proximity sensor is easy and will improve the call experience. <it>You can calibrate the proximity sensor at a later time in Settings → Maintenance → Proximity Sensor Tool</it>.]]></string>
     <string name="preference_successfully_calibrated" translatable="false">preference_successfully_calibrated</string>
     <string name="NotificationTitle">Finalizing Update</string>
+
+    <!-- FRAGMENT TAGS -->
+    <string name="fragment_tag_incompatible_device_dialog" translatable="false">incompatible_device</string>
+
+    <!-- EXTERNAL PACKAGES AND ACTIVITIES -->
+    <string name="package_fairphone_updater" translatable="false">com.fairphone.updater</string>
+    <string name="activity_fairphone_updater_check_for_updates" translatable="false">com.fairphone.updater.FairphoneUpdater</string>
 
 </resources>
