--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,15 +6,11 @@
     <string name="activity_diagnostics">Diagnostics</string>
     <string name="activity_calibration">Calibration</string>
 
-    <!-- DIALOGS -->
-    <string name="dialog_cancel">Cancel</string>
-    <string name="dialog_go_to_updater">Check for updates</string>
-
     <string name="incompatible_device">Incompatible device</string>
     <string name="device_cannot_run_calibration_tool">The calibration tool cannot be run on your Fairphone 2. Make sure your device is running the latest software update.</string>
 
     <string name="msg_block">Cover the sensor area completely with your finger (the sensor area is shown in the image above), then press the Next button.</string>
-    <string name="msg_reading">Checking…</string>
+    <string name="msg_reading">Retrieving information from the proximity sensor…</string>
     <string name="msg_unblock">Remove your finger from the sensor area and press the Next button.</string>
     <string name="msg_cal">Calibrating…</string>
     <string name="msg_calibration_success"><![CDATA[Calibration successful! Press the OK & Reboot button to finalize the calibration process and to reboot your Fairphone.]]></string>
@@ -25,7 +21,7 @@
     <string name="msg_fail_block">Something went wrong, please try again. Make sure you cover the sensor area completely.</string>
     <string name="msg_fail_cal">Calibration unsuccessful, please check the device and try again.</string>
     <string name="msg_fail_unlock">Something went wrong, please try again. Make sure to remove your finger from the sensor area and that the screen is clean.</string>
-    <string name="msg_fail_write_sns">Encountering unexpected permission issue…</string>
+    <string name="msg_fail_write_sns">Something went wrong, please check that your device is up-to-date and try again.</string>
 
     <string name='not_triggered'>Not triggered</string>
     <string name='state'>State: </string>
@@ -33,9 +29,9 @@
     <string name='block_value'>Block value: </string>
     <string name='unblock_value'>Unlock value: </string>
 
-    <string name="step_1">Step 1</string>
-    <string name="step_2">Step 2</string>
-    <string name="step_3">Step 3</string>
+    <string name="step_1">Step 1/3</string>
+    <string name="step_2">Step 2/3</string>
+    <string name="step_3">Step 3/3</string>
 
     <string name="Heading">One more thing…</string>
     <string name="greating">Proximity sensor calibration</string>
@@ -51,6 +47,7 @@
     <string name="Exit">Exit</string>
     <string name="OK">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="go_to_updater">Check for updates</string>
     <string name="ask_really_dont_show_title">Are you sure?</string>
     <string name="ask_really_dont_show_text"><![CDATA[Calibrating the proximity sensor is easy and will improve the call experience. <it>You can calibrate the proximity sensor at a later time in Settings → Maintenance → Proximity Sensor Tool</it>.]]></string>
     <string name="preference_successfully_calibrated" translatable="false">preference_successfully_calibrated</string>
