Display final step (reboot) if there is a pending calibration
Extract calibration status helper methods.

Change-Id: I0e69dc7508e85bea8a546f2e17c81361149288c0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,9 @@
     <!-- FRAGMENT TAGS -->
     <string name="fragment_tag_incompatible_device_dialog" translatable="false">incompatible_device</string>
 
+    <!-- SHARED PREFERENCES -->
+    <string name="preference_pending_calibration" translatable="false">preference_pending_calibration</string>
+
     <!-- EXTERNAL PACKAGES AND ACTIVITIES -->
     <string name="package_fairphone_updater" translatable="false">com.fairphone.updater</string>
     <string name="activity_fairphone_updater_check_for_updates" translatable="false">com.fairphone.updater.FairphoneUpdater</string>
