--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -16,16 +16,13 @@
     <string name="msg_cal">Kalibreren…</string>
     <string name="msg_calibration_success"><![CDATA[Kalibratie succesvol! Druk op de OK & Herstart knop om de kalibratie af te ronden en je Fairphone te herstarten.]]></string>
     <string name="Text"> <p>Fairphone OS geeft je nu de mogelijkheid om de afstandssensor te kalibreren - dit verbetert het gedrag van de sensor tijdens een telefoongesprek (scherm uit/aan).</p> <p>We raden je aan de afstandssensor te kalibreren - dit is eenvoudig en zo gepiept!</p></string>
-    <string name="msg_fail">Onsuccesvol</string>
+    <string name="Text"> <p>Fairphone OS geeft je nu de mogelijkheid om de afstandssensor te kalibreren - dit verbetert het gedrag van de sensor tijdens een telefoongesprek (scherm uit/aan).</p> <p>We raden je aan de afstandssensor te kalibreren - dit is eenvoudig en zo gepiept!</p></string>
     <string name="msg_fail_block">Er is iets misgegaan, probeer het opnieuw. Zorg ervoor dat je de sensor volledig bedekt.</string>
-    <string name="msg_fail_cal">Kalibratie onsuccesvol. Controleer het toestel en probeer opnieuw.</string>
     <string name="msg_fail_unlock">Er is iets misgegaan, probeer het opnieuw. Zorg ervoor dat je vinger is verwijderd van de sensor en dat het scherm schoon is.</string>
     <string name="msg_fail_write_sns">Er is iets misgegaan, controleer of je toestel up-to-date is en probeer het opnieuw.</string>
     <string name="msg_reading">Informatie ophalen van de afstandssensor…</string>
     <string name="msg_step_success">Succesvol</string>
     <string name="msg_unblock">Verwijder je vinger van de sensor en druk op de Volgende knop.</string>
-    <string name="name_exit">Sluit</string>
-    <string name="name_read">OK</string>
     <string name="next">Volgende</string>
     <string name="not_triggered">Niet geactiveerd</string>
     <string name="reboot"><![CDATA[OK & Herstart]]></string>
@@ -37,8 +34,7 @@
     <string name="sensor_value">"Sensor waarde: "</string>
     <string name="ask_really_dont_show_text">Het kalibreren van de afstandssensor is eenvoudig en verbetert het scherm gedrag tijdens een telefoongesprek (scherm uit/aan). <it>Je kunt de afstandssensor op een later tijdstip kalibreren onder Instellingen → Onderhoud → Afstandssensor → Kalibrering.</it>.</string>
     <string name="NotificationTitle">Afstandssensor kalibratie</string>
-<string name="incompatible_device">Onverenigbaar toestel</string>
+    <string name="incompatible_device">Onverenigbaar toestel</string>
     <string name="go_to_updater">Controleren op updates</string>
     <string name="device_cannot_run_calibration_tool">De kalibratie tool kan niet starten op je Fairphone 2. Zorg ervoor dat je toestel de laatste software update draait.</string>
-
-    </resources>
+</resources>
