--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,15 +6,15 @@
     <string name="Text"><![CDATA[ <p>Fairphone OS te da la opción de calibrar el sensor de proximidad - esto mejorará el funcionamiento del sensor mientras haces una llamada (la pantalla se encenderá cuando terminas la llamada).</p> <p>Te recomendamos calibrar el sensor de proximidad ahora para tener el mejor funcionamiento - es fácil y rápido!</p>]]></string>
     <string name="activity_calibration">Calibración</string>
     <string name="activity_diagnostics">Diagnóstico</string>
-    <string name="msg_block">Cubre el área del sensor de proximidad con el dedo (el área a cubrir esta indicada en la imagen superior), luego pulsa siguiente.</string>
+    <string name="msg_block">Cubre el área del sensor de proximidad con el dedo (el área a cubrir esta indicada en la imagen superior), luego pulsa Próximo.</string>
     <string name="msg_cal">Calibrando…</string>
-    <string name="msg_calibration_success">¡Calibración lista! Pulsa OK para finalizar el proceso y reiniciar tu Fairphone.</string>
+    <string name="msg_calibration_success">¡Calibración lista! Pulsa Aceptar y Reiniciar para finalizar el proceso y reiniciar tu Fairphone.</string>
     <string name="msg_step_success">Exitoso</string>
     <string name="msg_fail_block">Ha ocurrido un error; por favor inténtalo de nuevo. Asegúrate de cubrir el área del sensor completamente.</string>
     <string name="msg_fail_unlock">Ha ocurrido un error. Por favor inténtalo de nuevo. Asegúrate de que el sensor de proximidad no está cubierto y la pantalla esta limpia.</string>
     <string name="msg_fail_write_sns">Ha ocurrido un error, comprueba que tu dispositivo está actualizado e intenta de nuevo.</string>
     <string name="msg_reading">Obteniendo información del sensor de proximidad…</string>
-    <string name="msg_unblock">Retira el dedo del sensor y pulsa siguente.</string>
+    <string name="msg_unblock">Retira el dedo del sensor y pulsa Próximo.</string>
     <string name="next">Próximo</string>
     <string name="dontshowagain">No mostrar esta pantalla de nuevo.</string>
     <string name="unblock_value">Valor sensor libre:</string>
