--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Proximity Sensor Tool</string>
+    <string name="app_full_name" translatable="false">Fairphone Proximity Sensor Tool</string>
 
     <string name="activity_diagnostics">Diagnostics</string>
     <string name="activity_calibration">Calibration</string>
