Add notification channels
Since A8 all notifications must be assigned to a channel.

Issue: FP2P-394
Change-Id: I05783442847fe3a57758f73f1c9cb7f993af1e9c

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,7 @@
     <string name="package_fairphone_updater" translatable="false">com.fairphone.updater</string>
     <string name="activity_fairphone_updater_check_for_updates" translatable="false">com.fairphone.updater.FairphoneUpdater</string>
 
+    <string name="notification_channel_id" translatable="false">proximity_sensor_notifications</string>
+    <string name="notification_channel_name" translatable="false">Notifications</string>
+
 </resources>
